CORE-7799  CLONE - A lot of issue in MetraView on English(GB) localization

--- a/Sites/MetraView/App_GlobalResources/AdminMenu.en-GB.resx
+++ b/Sites/MetraView/App_GlobalResources/AdminMenu.en-GB.resx
@@ -127,6 +127,6 @@
         <value>Configure Site</value>
     </data>
     <data name="TEXT_WIDGETS" xml:space="preserve">
-        <value>Widget Path</value>
+        <value>Widgets</value>
     </data>
 </root>
