--- a/Sites/MetraView/App_GlobalResources/ErrorMessages.en-GB.resx
+++ b/Sites/MetraView/App_GlobalResources/ErrorMessages.en-GB.resx
@@ -112,15 +112,13 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="AjaxServices_ProductDetailSvc_ExtractDataInternal_You_do_not_have_access_to_view_these_details_" xml:space="preserve">
-        <value>You can pay your bill using a checking/savings account or a credit/debit card.
-
-Start by choosing the amount you wish to pay, your payment method, and your payment date.</value>
+        <value>You do not have access to view these details.</value>
     </data>
     <data name="ERROR" xml:space="preserve">
         <value>Error</value>
@@ -132,40 +130,40 @@ Start by choosing the amount you wish to pay, your payment method, and your paym
         <value>&lt;br/&gt;&lt;br/&gt;The account is dormant.  You may unlock it.</value>
     </data>
     <data name="ERROR_ACH_ADD" xml:space="preserve">
-        <value></value>
-    </data>
-    <data name="ERROR_ACH_LIST" xml:space="preserve">
-        <value>Unable to retrieve the details of this run.</value>
-    </data>
-    <data name="ERROR_ACH_LOAD" xml:space="preserve">
-        <value>Unable to save the configuration changes. See log for details.</value>
-    </data>
-    <data name="ERROR_ACH_REMOVE" xml:space="preserve">
-        <value>Unable to modify credit card information</value>
-    </data>
-    <data name="ERROR_ACH_UPDATE" xml:space="preserve">
-        <value>Unable to lock account.  Do you have permission?</value>
-    </data>
-    <data name="ERROR_ADD_SUBSCRIPTION" xml:space="preserve">
         <value>Unable to add ACH payment method to this account.</value>
     </data>
-    <data name="ERROR_CC_ADD" xml:space="preserve">
-        <value>Unable to add ACH payment method to this account</value>
-    </data>
-    <data name="ERROR_CC_LIST" xml:space="preserve">
+    <data name="ERROR_ACH_LIST" xml:space="preserve">
         <value>Unable to retrieve the list of ACH payment methods</value>
     </data>
-    <data name="ERROR_CC_LOAD" xml:space="preserve">
+    <data name="ERROR_ACH_LOAD" xml:space="preserve">
         <value>Unable to view ACH payment account details</value>
     </data>
-    <data name="ERROR_CC_REMOVE" xml:space="preserve">
+    <data name="ERROR_ACH_REMOVE" xml:space="preserve">
         <value>Unable to remove ACH payment method from your account</value>
     </data>
-    <data name="ERROR_CC_UPDATE" xml:space="preserve">
+    <data name="ERROR_ACH_UPDATE" xml:space="preserve">
         <value>Unable to modify ACH payment method information</value>
     </data>
+    <data name="ERROR_ADD_SUBSCRIPTION" xml:space="preserve">
+        <value>Unable to add subscription.</value>
+    </data>
+    <data name="ERROR_CC_ADD" xml:space="preserve">
+        <value>Unable to add credit card to this account</value>
+    </data>
+    <data name="ERROR_CC_LIST" xml:space="preserve">
+        <value>Unable to retrieve the list of credit cards</value>
+    </data>
+    <data name="ERROR_CC_LOAD" xml:space="preserve">
+        <value>Unable to view credit card details</value>
+    </data>
+    <data name="ERROR_CC_REMOVE" xml:space="preserve">
+        <value>Unable to remove credit card from your account</value>
+    </data>
+    <data name="ERROR_CC_UPDATE" xml:space="preserve">
+        <value>Unable to modify credit card information</value>
+    </data>
     <data name="ERROR_DOWNLOAD_REPORTS" xml:space="preserve">
-        <value></value>
+        <value>Unable to download reports</value>
     </data>
     <data name="ERROR_EMAIL_REQUIRED" xml:space="preserve">
         <value>Email address is required.</value>
@@ -174,25 +172,25 @@ Start by choosing the amount you wish to pay, your payment method, and your paym
         <value>End Date must be after the Start Date</value>
     </data>
     <data name="ERROR_LAST_LOGIN" xml:space="preserve">
-        <value>The following Subscription was updated successfully: </value>
+        <value>The last login for {0} was on {1}.  There have been {2} failed login attempts since the last successful login.</value>
     </data>
     <data name="ERROR_LOGIN_INVALID" xml:space="preserve">
         <value>Invalid username or password.</value>
     </data>
     <data name="ERROR_LOGIN_LOCKED" xml:space="preserve">
-        <value>You received this credit because your subscription with a recurring charge being billed in advance changed during this billing period.&lt;BR&gt;&lt;BR&gt;On your previous bill, we charged you [RCAmount] in advance.  You only used the service from [RCIntervalStart] to [RCIntervalEnd].  So, this credit represents the difference from [ProratedIntervalStart] to [ProratedIntervalEnd].  This is a period of [ProratedDays] days.&lt;BR&gt;&lt;BR&gt;To calculate the credit, we used a daily rate of [ProratedDailyRate].  The daily rate was calculated taking [RCAmount] and dividing it by the number of days in the period.  So, we took the period of [ProratedDays] days and multiplied it by [ProratedDailyRate] giving you a credit of [Amount].&lt;BR&gt;</value>
+        <value>Your account has been locked for security reasons.  Please contact support to resolve this issue.</value>
     </data>
     <data name="ERROR_LOGIN_PASSWORD_EXPIRING" xml:space="preserve">
-        <value>Your password has expired</value>
+        <value>Your password is expiring in {0} day(s).  If you have time, why not change it now?  </value>
     </data>
     <data name="ERROR_MAIN_MENU" xml:space="preserve">
         <value>Invalid menu file, notify your system administrator.</value>
     </data>
     <data name="ERROR_MAKE_PAYMENT" xml:space="preserve">
-        <value></value>
+        <value>We were unable to process your payment. Please verify your payment details and try again. If the problem persists, contact us to complete your transaction.</value>
     </data>
     <data name="ERROR_NEVER_LOGGED" xml:space="preserve">
-        <value></value>
+        <value>This user has never logged into MetraView.</value>
     </data>
     <data name="ERROR_NO_REPORTS_FOUND" xml:space="preserve">
         <value>No Reports Found</value>
@@ -201,60 +199,60 @@ Start by choosing the amount you wish to pay, your payment method, and your paym
         <value>Invalid account</value>
     </data>
     <data name="ERROR_PASSWORD_EXPIRED" xml:space="preserve">
-        <value>Your Password Expired</value>
+        <value>Your password has expired</value>
     </data>
     <data name="ERROR_PASSWORDS_DO_NOT_MATCH" xml:space="preserve">
         <value>Passwords do not match.</value>
     </data>
     <data name="ERROR_REPORT_CONFIG" xml:space="preserve">
-        <value></value>
+        <value>Error in config ReportFormat file</value>
     </data>
     <data name="ERROR_REPORT_FORMAT" xml:space="preserve">
-        <value></value>
+        <value>Error in config ReportFormat file. Report format type isn't defined.</value>
     </data>
     <data name="ERROR_REPORT_FORMAT_CONFIG" xml:space="preserve">
-        <value></value>
+        <value>Error in config ReportFormat file. Incorrect file structure.</value>
     </data>
     <data name="ERROR_REPORT_IMAGE" xml:space="preserve">
-        <value></value>
+        <value>Error in config ReportFormat file. Report image  isn't defined.</value>
     </data>
     <data name="ERROR_REPORT_OPEN" xml:space="preserve">
-        <value></value>
+        <value>Unable open and save report </value>
     </data>
     <data name="ERROR_SECURITY_ANSWER_INVALID" xml:space="preserve">
-        <value></value>
+        <value>Indicate the Security Question or Custom Security Question.</value>
     </data>
     <data name="ERROR_SECURITY_QUESTION_INVALID" xml:space="preserve">
-        <value></value>
+        <value>Unable to set both the Security Question and the Custom Security Question.</value>
     </data>
     <data name="ERROR_SUBSCRIBER_NULL" xml:space="preserve">
-        <value>you can view your usage and pay your bill on the go.  Coming soon...</value>
+        <value>You must first manage an account before you can perform an action on it.</value>
     </data>
     <data name="ERROR_TEMP_LOCK" xml:space="preserve">
-        <value>The subscription start and end dates must be between {0} and {1}.</value>
+        <value>The system only allows {0} login attempts before the account is temporarily locked for {1} minutes.  You may manually unlock the account.</value>
     </data>
     <data name="ERROR_UNABLE_TO_UNLOCK_ACCOUNT" xml:space="preserve">
-        <value>Unable to display page.</value>
+        <value>Unable to lock account.  Do you have permission?</value>
     </data>
     <data name="ERROR_UPDATING_ACCOUNT" xml:space="preserve">
-        <value>Unable to save search.</value>
+        <value>Unable to update account information.</value>
     </data>
     <data name="ERROR_USERNAME_INVALID" xml:space="preserve">
-        <value>User Name:</value>
+        <value>Username is invalid.</value>
     </data>
     <data name="SpecCharacteristicRepository_DeleteSpecCharacteristic_Failed_deleting_spec_" xml:space="preserve">
-        <value></value>
+        <value>Failed removing property.</value>
     </data>
     <data name="SpecCharacteristicRepository_LoadSpecCharacteristics_Failed_getting_specs_" xml:space="preserve">
-        <value></value>
+        <value>Failed getting properties.</value>
     </data>
     <data name="SpecCharacteristicRepository_LoadSubCharacteristicValues_Failed_getting_entity_properties_" xml:space="preserve">
-        <value></value>
+        <value>Failed getting entity properties.</value>
     </data>
     <data name="SpecCharacteristicRepository_SaveSpecCharacteristic_Failed_saving_spec_" xml:space="preserve">
-        <value></value>
+        <value>Failed saving properties.</value>
     </data>
     <data name="SpecCharacteristicRepository_SpecCharacteristicRepository_Access_denied_" xml:space="preserve">
-        <value></value>
+        <value>Access Denied</value>
     </data>
 </root>
