--- a/Sites/MetraView/App_LocalResources/AccountInfo.aspx.en-GB.resx
+++ b/Sites/MetraView/App_LocalResources/AccountInfo.aspx.en-GB.resx
@@ -136,13 +136,13 @@
         <value>City</value>
     </data>
     <data name="Company" xml:space="preserve">
-        <value></value>
+        <value>Company</value>
     </data>
     <data name="Country" xml:space="preserve">
         <value>Country</value>
     </data>
     <data name="Email" xml:space="preserve">
-        <value></value>
+        <value>Email</value>
     </data>
     <data name="FirstName" xml:space="preserve">
         <value>First Name</value>
@@ -157,10 +157,10 @@
         <value>Account Information</value>
     </data>
     <data name="PhoneNumber" xml:space="preserve">
-        <value></value>
+        <value>Phone Number</value>
     </data>
     <data name="State" xml:space="preserve">
-        <value></value>
+        <value>State</value>
     </data>
     <data name="Zip" xml:space="preserve">
         <value>Zip</value>
