--- a/Sites/MetraView/UserControls/App_LocalResources/ReportParams.ascx.en-GB.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/ReportParams.ascx.en-GB.resx
@@ -121,6 +121,6 @@
         <value>Showing results for</value>
     </data>
     <data name="Through.Text" xml:space="preserve">
-        <value>This will approve all nonstandard charges in the system</value>
+        <value>through</value>
     </data>
 </root>
