--- a/Sites/MetraView/UserControls/App_LocalResources/Subscriptions.ascx.en-GB.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/Subscriptions.ascx.en-GB.resx
@@ -148,6 +148,6 @@
         <value>My Subscriptions</value>
     </data>
     <data name="TotalAmountDue.Text" xml:space="preserve">
-        <value>Total Amount Due, {0}</value>
+        <value>Total Amount Due:</value>
     </data>
 </root>
