--- a/Sites/MetraView/App_GlobalResources/BillSubMenu.en-GB.resx
+++ b/Sites/MetraView/App_GlobalResources/BillSubMenu.en-GB.resx
@@ -130,6 +130,6 @@
         <value>Payment Methods</value>
     </data>
     <data name="TEXT_VIEW_BILL" xml:space="preserve">
-        <value></value>
+        <value>View Bill</value>
     </data>
 </root>
