--- a/Sites/MetraView/App_GlobalResources/KeyTerms.en-GB.resx
+++ b/Sites/MetraView/App_GlobalResources/KeyTerms.en-GB.resx
@@ -119,146 +119,194 @@
     </resheader>
     <data name="INDEPENDENT_ACCOUNT" xml:space="preserve">
         <value>Indepdendent account</value>
+        <comment>Indepdendent account</comment>
     </data>
     <data name="PAYEE_ACCOUNT" xml:space="preserve">
         <value>Payee</value>
+        <comment>The account being paid for</comment>
     </data>
     <data name="PAYER_ACCOUNT" xml:space="preserve">
-        <value></value>
+        <value>Payer</value>
+        <comment>The paying account</comment>
     </data>
     <data name="String1" xml:space="preserve">
         <value>Custom Rates</value>
+        <comment>Custom Rates</comment>
     </data>
     <data name="TEXT_KEYTERM_ACCOUNT_TYPE" xml:space="preserve">
         <value>Account Type</value>
+        <comment>Account Type</comment>
     </data>
     <data name="TEXT_KEYTERM_ACCOUNT_TYPES" xml:space="preserve">
         <value>Account Types</value>
+        <comment>Account Types</comment>
     </data>
     <data name="TEXT_KEYTERM_CAPABILITIES" xml:space="preserve">
         <value>Capabilities</value>
+        <comment>Capabilities</comment>
     </data>
     <data name="TEXT_KEYTERM_CAPABILITY" xml:space="preserve">
         <value>Capability</value>
+        <comment>Capability</comment>
     </data>
     <data name="TEXT_KEYTERM_CORPORATE_ACCOUNT" xml:space="preserve">
         <value>Corporate Account</value>
+        <comment>Corporate Account</comment>
     </data>
     <data name="TEXT_KEYTERM_COUNTER" xml:space="preserve">
         <value>Counter</value>
+        <comment>Counter</comment>
     </data>
     <data name="TEXT_KEYTERM_COUNTERS" xml:space="preserve">
         <value>Counters</value>
+        <comment>Counters</comment>
     </data>
     <data name="TEXT_KEYTERM_DISCOUNT" xml:space="preserve">
         <value>Discount</value>
+        <comment>Discount</comment>
     </data>
     <data name="TEXT_KEYTERM_DISCOUNTS" xml:space="preserve">
-        <value></value>
+        <value>Discounts</value>
+        <comment>Discounts</comment>
     </data>
     <data name="TEXT_KEYTERM_GROUP_SUBSCRIPTION" xml:space="preserve">
-        <value></value>
+        <value>Group Subscription</value>
+        <comment>Group Subscription</comment>
     </data>
     <data name="TEXT_KEYTERM_GROUP_SUBSCRIPTIONS" xml:space="preserve">
         <value>Group Subscriptions</value>
+        <comment>Group Subscriptions</comment>
     </data>
     <data name="TEXT_KEYTERM_NON_RECURRING_CHARGE" xml:space="preserve">
-        <value></value>
+        <value>Non-Recurring Charge</value>
+        <comment>Non-Recurring Charge</comment>
     </data>
     <data name="TEXT_KEYTERM_NON_RECURRING_CHARGES" xml:space="preserve">
         <value>Non-Recurring Charges</value>
+        <comment>Non-Recurring Charges</comment>
     </data>
     <data name="TEXT_KEYTERM_NON_SHARED_PRICE_LIST" xml:space="preserve">
         <value>Non-Shared Price List</value>
+        <comment>Non-Shared Price List</comment>
     </data>
     <data name="TEXT_KEYTERM_NON_SHARED_PRICE_LISTS" xml:space="preserve">
         <value>Non-Shared Price Lists</value>
+        <comment>Non-Shared Price Lists</comment>
     </data>
     <data name="TEXT_KEYTERM_PARAMETER_TABLE" xml:space="preserve">
         <value>Parameter Table</value>
+        <comment>Parameter Table</comment>
     </data>
     <data name="TEXT_KEYTERM_PARAMETER_TABLES" xml:space="preserve">
         <value>Parameter Tables</value>
+        <comment>Parameter Tables</comment>
     </data>
     <data name="TEXT_KEYTERM_PERSONAL_RATE" xml:space="preserve">
         <value>Custom Rate</value>
+        <comment>Custom Rate</comment>
     </data>
     <data name="TEXT_KEYTERM_PRICE_LIST" xml:space="preserve">
         <value>Price List</value>
+        <comment>Price List</comment>
     </data>
     <data name="TEXT_KEYTERM_PRICE_LISTS" xml:space="preserve">
         <value>Price Lists</value>
+        <comment>Price Lists</comment>
     </data>
     <data name="TEXT_KEYTERM_PRICEABLE_ITEM" xml:space="preserve">
         <value>Priceable Item</value>
+        <comment>Priceable Item</comment>
     </data>
     <data name="TEXT_KEYTERM_PRICEABLE_ITEMS" xml:space="preserve">
         <value>Priceable Items</value>
+        <comment>Priceable Items</comment>
     </data>
     <data name="TEXT_KEYTERM_PRODUCT_OFFERING" xml:space="preserve">
-        <value></value>
+        <value>Product Offering</value>
+        <comment>Product Offering</comment>
     </data>
     <data name="TEXT_KEYTERM_PRODUCT_OFFERINGS" xml:space="preserve">
         <value>Product Offerings</value>
+        <comment>Product Offerings</comment>
     </data>
     <data name="TEXT_KEYTERM_RATE_SCHEDULE" xml:space="preserve">
         <value>Rate Schedule</value>
+        <comment>Rate Schedule</comment>
     </data>
     <data name="TEXT_KEYTERM_RATE_SCHEDULES" xml:space="preserve">
         <value>Rate Schedules</value>
+        <comment>Rate Schedules</comment>
     </data>
     <data name="TEXT_KEYTERM_REBILL_NAME" xml:space="preserve">
         <value>Reassignment</value>
+        <comment>Reassignment</comment>
     </data>
     <data name="TEXT_KEYTERM_REBILL_VERB" xml:space="preserve">
         <value>Reassign</value>
+        <comment>Reassign</comment>
     </data>
     <data name="TEXT_KEYTERM_RECURRING_CHARGE" xml:space="preserve">
         <value>Recurring Charge</value>
+        <comment>Recurring Charge</comment>
     </data>
     <data name="TEXT_KEYTERM_RECURRING_CHARGES" xml:space="preserve">
         <value>Recurring Charges</value>
+        <comment>Recurring Charges</comment>
     </data>
     <data name="TEXT_KEYTERM_ROLE" xml:space="preserve">
         <value>Role</value>
+        <comment>Security Role</comment>
     </data>
     <data name="TEXT_KEYTERM_ROLES" xml:space="preserve">
         <value>Roles</value>
+        <comment>Security Roles</comment>
     </data>
     <data name="TEXT_KEYTERM_SERVICE_CHARGE" xml:space="preserve">
         <value>Service Charge</value>
+        <comment>Service Charge</comment>
     </data>
     <data name="TEXT_KEYTERM_SERVICE_CHARGES" xml:space="preserve">
         <value>Service Charges</value>
+        <comment>Service Charges</comment>
     </data>
     <data name="TEXT_KEYTERM_SERVICE_ENDPOINT" xml:space="preserve">
         <value>Service Endpoint</value>
+        <comment>Service Endpoint</comment>
     </data>
     <data name="TEXT_KEYTERM_SERVICE_ENDPOINTS" xml:space="preserve">
         <value>Service Endpoints</value>
+        <comment>Service Endpoints</comment>
     </data>
     <data name="TEXT_KEYTERM_SHARED_PRICE_LIST" xml:space="preserve">
         <value>Shared Price List</value>
+        <comment>Shared Price List</comment>
     </data>
     <data name="TEXT_KEYTERM_SHARED_PRICE_LISTS" xml:space="preserve">
         <value>Shared Price Lists</value>
+        <comment>Shared Price Lists</comment>
     </data>
     <data name="TEXT_KEYTERM_UNIT_DEPENDENT_RECURRING_CHARGE" xml:space="preserve">
-        <value>Unit Dependent Recurring Charge Configuration</value>
+        <value>Unit-Dependent Recurring Charge</value>
+        <comment>Unit-Dependent Recurring Charge</comment>
     </data>
     <data name="TEXT_KEYTERM_UNIT_DEPENDENT_RECURRING_CHARGES" xml:space="preserve">
-        <value>Unit-Dependent Recurring Charge</value>
+        <value>Unit-Dependent Recurring Charges</value>
+        <comment>Unit-Dependent Recurring Charges</comment>
     </data>
     <data name="TEXT_KEYTERM_USAGE_CHARGE" xml:space="preserve">
-        <value>Usage</value>
+        <value>Usage Charge</value>
+        <comment>Usage Charge</comment>
     </data>
     <data name="TEXT_KEYTERM_USAGE_CHARGE_AGGREGATE" xml:space="preserve">
-        <value>Usage Charge</value>
+        <value>Usage Charge (Aggregate)</value>
+        <comment>Usage Charge (Aggregate)</comment>
     </data>
     <data name="TEXT_KEYTERM_USAGE_CHARGES" xml:space="preserve">
-        <value>Usage Charge (Aggregate)</value>
+        <value>Usage Charges</value>
+        <comment>Usage Charges</comment>
     </data>
     <data name="TEXT_KEYTERM_USAGE_CHARGES_AGGREGATE" xml:space="preserve">
-        <value>Usage Charges</value>
+        <value>Usage Charges (Aggregate)</value>
+        <comment>Usage Charges (Aggregate)</comment>
     </data>
 </root>
