--- a/Sites/MetraView/App_LocalResources/AdjustmentDetails.aspx.en-GB.resx
+++ b/Sites/MetraView/App_LocalResources/AdjustmentDetails.aspx.en-GB.resx
@@ -112,13 +112,13 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="ADJ_AMOUNT" xml:space="preserve">
-        <value></value>
+        <value>Adjustment Amount</value>
     </data>
     <data name="ADJ_AMOUNT_AS_STRING" xml:space="preserve">
         <value>AdjustmentAmountAsString</value>
