--- a/Sites/MetraView/App_LocalResources/Bill.aspx.en-GB.resx
+++ b/Sites/MetraView/App_LocalResources/Bill.aspx.en-GB.resx
@@ -112,10 +112,10 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="BillAndPayments.Text" xml:space="preserve">
         <value>Bill &amp; Payments</value>
@@ -127,6 +127,6 @@
         <value>Bill &amp; Payments</value>
     </data>
     <data name="SummaryView.Text" xml:space="preserve">
-        <value>Summary By Error Type</value>
+        <value>Summary View</value>
     </data>
 </root>
