--- a/Sites/MetraView/App_LocalResources/ChangePasswordSuccess.aspx.en-GB.resx
+++ b/Sites/MetraView/App_LocalResources/ChangePasswordSuccess.aspx.en-GB.resx
@@ -112,15 +112,15 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="PageResource1.Title" xml:space="preserve">
         <value>MetraView</value>
     </data>
     <data name="PasswordChanged.Text" xml:space="preserve">
-        <value>Your password has expired</value>
+        <value>Your password was changed successfully.</value>
     </data>
 </root>
