--- a/Sites/MetraView/App_LocalResources/Login.aspx.en-gb.resx
+++ b/Sites/MetraView/App_LocalResources/Login.aspx.en-gb.resx
@@ -121,7 +121,7 @@
         <value>details</value>
     </data>
     <data name="lblMessageResource1.Text" xml:space="preserve">
-        <value>Your login attempt was not successful. Please try again.</value>
+        <value>Your Password Expired</value>
     </data>
     <data name="lblPleaseChangeResource1.Text" xml:space="preserve">
         <value>Please change your password</value>
@@ -130,7 +130,7 @@
         <value>Login</value>
     </data>
     <data name="Login1Resource1.FailureText" xml:space="preserve">
-        <value>Your account information was successfully updated.</value>
+        <value>Your login attempt was not successful. Please try again.</value>
     </data>
     <data name="Login1Resource1.LoginButtonText" xml:space="preserve">
         <value>Login</value>
@@ -148,7 +148,7 @@
         <value>User Name:</value>
     </data>
     <data name="Login1Resource1.UserNameRequiredErrorMessage" xml:space="preserve">
-        <value></value>
+        <value>User Name is required.</value>
     </data>
     <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
         <value>Confirm Password</value>
