--- a/Sites/MetraView/App_LocalResources/Subscriptions.aspx.en-GB.resx
+++ b/Sites/MetraView/App_LocalResources/Subscriptions.aspx.en-GB.resx
@@ -127,7 +127,7 @@
         <value>Time Zone</value>
     </data>
     <data name="EmptyLabel.Text" xml:space="preserve">
-        <value>No Records Found</value>
+        <value>No records found</value>
     </data>
     <data name="ErrorSelectPO" xml:space="preserve">
         <value>Please select a valid product offering</value>
@@ -138,4 +138,7 @@
     <data name="Subscriptions.Text" xml:space="preserve">
         <value>My Subscriptions</value>
     </data>
+  <data name="EmptyLiteral.Text">
+    <value xml:space="preserve">No records found</value>
+  </data>
 </root>
