--- a/Sites/MetraView/App_LocalResources/Usage.aspx.en-GB.resx
+++ b/Sites/MetraView/App_LocalResources/Usage.aspx.en-GB.resx
@@ -112,10 +112,10 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="ChargeDetails.Text" xml:space="preserve">
         <value>Charge Details</value>
@@ -127,18 +127,18 @@
         <value>Detailed View</value>
     </data>
     <data name="endDateResource1.Label" xml:space="preserve">
-        <value>Title</value>
+        <value>to</value>
     </data>
     <data name="ShowReportFor.Text" xml:space="preserve">
         <value>Show Report For:</value>
     </data>
     <data name="startDateResource1.Label" xml:space="preserve">
-        <value>View Online Bill</value>
+        <value>View usage from</value>
     </data>
     <data name="SummaryView.Text" xml:space="preserve">
-        <value>Summary By Interval Type</value>
+        <value>Summary View</value>
     </data>
     <data name="Usage.Text" xml:space="preserve">
-        <value></value>
+        <value>Usage</value>
     </data>
 </root>
