--- a/Sites/MetraView/Payments/App_LocalResources/MakePayment.aspx.en-GB.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/MakePayment.aspx.en-GB.resx
@@ -112,10 +112,10 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="btnNext.Text" xml:space="preserve">
         <value>Next</value>
@@ -133,7 +133,9 @@
         <value>Payment Method</value>
     </data>
     <data name="InstructionsText.Text" xml:space="preserve">
-        <value>You are about to permanently delete this group subscription and all contained data from the system. This is only allowed if there was never any participation in this group subscription. This group subscription will be removed from any account templates it may have been assigned to.</value>
+        <value>You can pay your bill using a checking/savings account or a credit/debit card.
+
+Start by choosing the amount you wish to pay, your payment method, and your payment date.</value>
     </data>
     <data name="lblPaymentAmount.Text" xml:space="preserve">
         <value>Payment Amount</value>
@@ -172,7 +174,7 @@
         <value>Schedule Payment Date</value>
     </data>
     <data name="rcTotalAmountDue.BoxLabel" xml:space="preserve">
-        <value>Total</value>
+        <value>Total Amount Due, {0}</value>
     </data>
     <data name="TEXT_INVALID_SCHEDULED_DATE" xml:space="preserve">
         <value>Scheduled Date must be in the Future</value>
@@ -187,6 +189,6 @@
         <value>Select a Payment Method</value>
     </data>
     <data name="UnknownText" xml:space="preserve">
-        <value></value>
+        <value>Unknown</value>
     </data>
 </root>
