--- a/Sites/MetraView/Payments/App_LocalResources/ReviewPayment.aspx.en-GB.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/ReviewPayment.aspx.en-GB.resx
@@ -112,16 +112,16 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="AccountNumber" xml:space="preserve">
         <value>Account Number</value>
     </data>
     <data name="BankAccountType" xml:space="preserve">
-        <value></value>
+        <value>Bank Account Type</value>
     </data>
     <data name="Cancel.Text" xml:space="preserve">
         <value>Cancel</value>
@@ -136,7 +136,7 @@
         <value>Please review your payment details. If everything is correct, click Next button to continue.</value>
     </data>
     <data name="lcAmount.Label" xml:space="preserve">
-        <value></value>
+        <value>Amount</value>
     </data>
     <data name="lcConfirmationNumber.Label" xml:space="preserve">
         <value>Confirmation Number</value>
