--- a/Sites/MetraView/Payments/App_LocalResources/ViewPaymentHistory.aspx.en-GB.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/ViewPaymentHistory.aspx.en-GB.resx
@@ -112,10 +112,10 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="ACCOUNT_NUMBER" xml:space="preserve">
         <value>Account Number</value>
@@ -127,7 +127,7 @@
         <value>ACH Payment</value>
     </data>
     <data name="ACH_TEXT" xml:space="preserve">
-        <value></value>
+        <value>ACH</value>
     </data>
     <data name="ACTIONS" xml:space="preserve">
         <value>Actions</value>
@@ -148,10 +148,10 @@
         <value>Address Line 2</value>
     </data>
     <data name="AMOUNT" xml:space="preserve">
-        <value></value>
+        <value>Amount</value>
     </data>
     <data name="AMOUNT_AS_STRING" xml:space="preserve">
-        <value></value>
+        <value>Amount</value>
     </data>
     <data name="btnAddACH.Text" xml:space="preserve">
         <value>Add ACH</value>
@@ -175,10 +175,10 @@
         <value>Card Type</value>
     </data>
     <data name="CURRENCY" xml:space="preserve">
-        <value></value>
+        <value>Currency</value>
     </data>
     <data name="DESCRIPTION" xml:space="preserve">
-        <value></value>
+        <value>Description</value>
     </data>
     <data name="EMPTY_TEXT" xml:space="preserve">
         <value>No records found.</value>
@@ -214,16 +214,16 @@
         <value>Payment Methods</value>
     </data>
     <data name="PAYMENT_TYPE" xml:space="preserve">
-        <value></value>
+        <value>Payment Type</value>
     </data>
     <data name="PRIORITY" xml:space="preserve">
         <value>Priority</value>
     </data>
     <data name="SESSION_ID" xml:space="preserve">
-        <value>Session Id</value>
+        <value>Session ID</value>
     </data>
     <data name="STATE_PROVINCE" xml:space="preserve">
-        <value></value>
+        <value>State / Province</value>
     </data>
     <data name="TEXT_ERROR_MSG" xml:space="preserve">
         <value>An account must be selected to view this page.</value>
@@ -232,6 +232,6 @@
         <value>Payment History</value>
     </data>
     <data name="ZIP_CODE" xml:space="preserve">
-        <value></value>
+        <value>Zip / Postal Code</value>
     </data>
 </root>
