--- a/Sites/MetraView/UserControls/App_LocalResources/Intervals.ascx.en-GB.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/Intervals.ascx.en-GB.resx
@@ -117,6 +117,7 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
+    <assembly alias="mscorlib" name="mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <data name="ddIntervalsResource1.AllowBlank" xml:space="preserve">
         <value>False</value>
     </data>
