--- a/Sites/MetraView/UserControls/App_LocalResources/SiteTimeout.ascx.en-GB.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/SiteTimeout.ascx.en-GB.resx
@@ -112,10 +112,10 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="SessionTimeoutChangingMessage.Text" xml:space="preserve">
         <value>5 minutes and 0 seconds</value>
@@ -124,7 +124,7 @@
         <value> minutes and </value>
     </data>
     <data name="SessionTimeoutMsg2.Text" xml:space="preserve">
-        <value>Your payment has been processed</value>
+        <value>Your session ends after {0} minutes of inactivity. </value>
     </data>
     <data name="SessionTimeoutMsg3.Text" xml:space="preserve">
         <value>Click OK to keep your session alive.  You have </value>
@@ -136,6 +136,6 @@
         <value>Session Timeout Pending</value>
     </data>
     <data name="SessiontTimeoutMsg1.Text" xml:space="preserve">
-        <value>Your session ends after {0} minutes of inactivity. </value>
+        <value>Your session is about to time out as a security measure.</value>
     </data>
 </root>
