--- a/Sites/MetraView/UserControls/App_LocalResources/Upsell.ascx.en-GB.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/Upsell.ascx.en-GB.resx
@@ -124,11 +124,9 @@
         <value>On The Go?</value>
     </data>
     <data name="ViewOnGo.Text" xml:space="preserve">
-        <value>You can pay your bill using a checking/savings account or a credit/debit card.
-
-Start by choosing the amount you wish to pay, your payment method, and your payment date.</value>
+        <value>you can view your usage and pay your bill on the go.  Coming soon...</value>
     </data>
     <data name="WithOur.Text" xml:space="preserve">
-        <value>Width</value>
+        <value>With our</value>
     </data>
 </root>
