--- a/Sites/MetraView/UserControls/App_LocalResources/UsageGraph.ascx.en-GB.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/UsageGraph.ascx.en-GB.resx
@@ -124,6 +124,6 @@
         <value>.</value>
     </data>
     <data name="UsageGraphText.Text" xml:space="preserve">
-        <value>There was a problem retrieving data.</value>
+        <value>This chart represents the top usage charges for the current billing interval broken out by group.  To view more details regarding these charges click</value>
     </data>
 </root>
