--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.fr.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.fr.resx
@@ -118,31 +118,31 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Operations Dashboard</value>
+    <value>{FR}Operations Dashboard</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet - Operations Dashboard</value>
+    <value>{FR}MetraNet - Operations Dashboard</value>
   </data>
   <data name="pnlPendingBillClose.Text" xml:space="preserve">
-    <value>Pending Bill Close</value>
+    <value>{FR}Pending Bill Close</value>
   </data>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
-    <value>No Pending Bill Close</value>
+    <value>{FR}No Pending Bill Close</value>
   </data>
   <data name="TEXT_INTERVAL_ID" xml:space="preserve">
-    <value>Interval ID</value>
+    <value>{FR}Interval ID</value>
   </data>
   <data name="TEXT_START" xml:space="preserve">
-    <value>Start</value>
+    <value>{FR}Start</value>
   </data>
   <data name="TEXT_END" xml:space="preserve">
-    <value>End</value>
+    <value>{FR}End</value>
   </data>  
   <data name="TEXT_STATUS" xml:space="preserve">
-    <value>Status</value>
+    <value>{FR}Status</value>
   </data>  
   <data name="TEXT_CYCLE" xml:space="preserve">
-    <value>Cycle</value>
+    <value>{FR}Cycle</value>
   </data>
 	
 	
