--- a/Quoting/App_LocalResources/CreateQuote.aspx.it.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.it.resx
@@ -225,7 +225,7 @@
   <data name="MTbtnCancelResource1.Text" xml:space="preserve">
     <value />
   </data>
-  <data name="MTTitleCreateQuoteResource" xml:space="preserve">
+  <data name="MTTitleCreateQuoteResource.Text" xml:space="preserve">
     <value />
   </data>
   <data name="REMOVE_ICB" xml:space="preserve">
