--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.ja.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.ja.resx
@@ -126,54 +126,37 @@
   <data name="pnlPendingBillClose.Text" xml:space="preserve">
     <value>{JA}Pending Bill Close</value>
   </data>
-  <data name="NO_RECORDS_TEXT" xml:space="preserve">
+  <data name="pnlRunningAdapters.Text" xml:space="preserve">
+    <value>{JA}Running Adapters</value>
+  </data>
+  <data name="NO_PENDING_BILL_CLOSE_TEXT" xml:space="preserve">
     <value>{JA}No Pending Bill Close</value>
   </data>
-  <data name="TEXT_INTERVAL_ID" xml:space="preserve">
-    <value>{JA}Interval ID</value>
+  <data name="NO_RUNNING_ADAPTERS_TEXT" xml:space="preserve">
+    <value>{JA}No Running Adapters</value>
   </data>
-  <data name="TEXT_START" xml:space="preserve">
-    <value>{JA}Start</value>
+   <data name="TEXT_BILL_GROUP" xml:space="preserve">
+    <value>{JA}Bill Group</value>
+  </data>
+  <data name="TEXT_CYCLE" xml:space="preserve">
+    <value>{JA}Cycle</value>
   </data>
   <data name="TEXT_END" xml:space="preserve">
     <value>{JA}End</value>
   </data>  
+  <data name="TEXT_INSTANCE" xml:space="preserve">
+    <value>{JA}Instance</value>
+  </data> 
+  <data name="TEXT_INTERVAL_ID" xml:space="preserve">
+    <value>{JA}Interval ID</value>
+  </data>
+  <data name="TEXT_NAME" xml:space="preserve">
+    <value>{JA}Name</value>
+  </data>  
+  <data name="TEXT_START" xml:space="preserve">
+    <value>{JA}Start</value>
+  </data>  
   <data name="TEXT_STATUS" xml:space="preserve">
     <value>{JA}Status</value>
-  </data>  
-  <data name="TEXT_CYCLE" xml:space="preserve">
-    <value>{JA}Cycle</value>
-  </data>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+  </data> 	
 </root>
