--- a/App_GlobalResources/JSConsts.it.resx
+++ b/App_GlobalResources/JSConsts.it.resx
@@ -1208,32 +1208,68 @@
   </data>
   <data name="TEXT_PASSWORD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) Passwords do not match.</value>
-  </data>  
+  </data>
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) Enter a valid phone number. Format: 555-555-5555</value>
-  </data>    
+  </data>
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) Credit card format is invalid</value>
-  </data>      
+  </data>
   <data name="TEXT_CREDITCARD_VERIFICATIONNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) CV Number is invalid</value>
-  </data>        
+  </data>
   <data name="TEXT_SSN_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) SSN format: xxx-xx-xxxx</value>
-  </data>          
+  </data>
   <data name="TEXT_ACCOUNTNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) Only numeric digits are allowed</value>
-  </data>            
+  </data>
   <data name="TEXT_ZIPCODE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) Zipcode is invalid</value>
-  </data>              
+  </data>
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>(ITALIAN) Middle initial is invalid</value>
-  </data>     
+  </data>
   <data name="TEXT_RETRY_COLUMN" xml:space="preserve">
     <value>(ITALIAN) Retry</value>
-  </data>    
+  </data>
   <data name="TEXT_REQUEST_SUBMITTED" xml:space="preserve">
     <value>{ITALIAN} Resubmitted Request</value>
-  </data>         
+  </data>
+  <data name="ACCOUNT_PAYEE_SELF_TEXT" xml:space="preserve">
+    <value>[it] This account pays for itself</value>
+  </data>
+  <data name="ACCOUNT_PAYEE_TEXT" xml:space="preserve">
+    <value>[it] This account is paid for by</value>
+  </data>
+  <data name="ACCOUNT_STATUS_LABEL_TEXT" xml:space="preserve">
+    <value>[it] Account Status</value>
+  </data>
+  <data name="ACCOUNT_STATUS_TEXT" xml:space="preserve">
+    <value>[it] Status</value>
+  </data>
+  <data name="ACCOUNT_BALANCE_AS_OF_TEXT" xml:space="preserve">
+    <value>[it] as of</value>
+  </data>
+  <data name="ACCOUNT_BALANCE_TEXT" xml:space="preserve">
+    <value>[it] Balance</value>
+  </data>
+  <data name="ACCOUNT_EDIT_INFO_TEXT" xml:space="preserve">
+    <value>[it] Change</value>
+  </data>
+  <data name="ACCOUNT_LTV_TEXT" xml:space="preserve">
+    <value>[it] Ltv</value>
+  </data>
+  <data name="ACCOUNT_MRR_TEXT" xml:space="preserve">
+    <value>[it] MRR</value>
+  </data>
+  <data name="ACCOUNT_MRR_GRAPH_TEXT" xml:space="preserve">
+    <value>[it] MRR</value>
+  </data>
+  <data name="ACCOUNT_INVOICE_GRAPH_TEXT" xml:space="preserve">
+    <value>[it] Invoice</value>
+  </data>  
+  <data name="ACCOUNT_FAILED_TRANSACTIONS_TEXT" xml:space="preserve">
+    <value>[it] Failed Transactions</value>
+  </data>   
 </root>
