FEAT-4028 [DEV] Get quote by ID and fill hidden controls by quote parameters FEAT-2550 UI: Screen to view quote results in detail
Added load all quote parameters into controls except of quote results and PI items

--- a/config/Localization/metratech.com/metratech.com_de.xml
+++ b/config/Localization/metratech.com/metratech.com_de.xml
@@ -291,5 +291,9 @@
       <Name>metratech.com/QuoteStatus/None</Name>
       <Value>metratech.com/QuoteStatus/None</Value>
     </locale_entry>
+    <locale_entry>
+      <Name>metratech.com/QuoteStatus/Converted</Name>
+      <Value>metratech.com/QuoteStatus/Converted</Value>
+    </locale_entry>
   </locale_space>
 </mt_config>
